[project]
name = "gramscript"
version = "1.0.1"
authors = [
  { name="kalanakt", email="e19198@eng.pdn.ac.lk" },
]
description = "Powerful, MTProto API framework in Python for users and bots "
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gramscript/gramscript.py"
"Bug Tracker" = "https://github.com/gramscript/gramscript.py/issues"